<resources>
    <string name="app_name">Foraneo101</string>

    <!--TextViews-->
    <!--Pantalla menú-->
    <string name="mensajeMenu">¿Qué necesitas?</string>
    <string name="ubicacionMenu">Ubicaciones</string>
    <string name="transporteMenu">Transportes</string>
    <string name="bitacoraMenu">Bitacora</string>
    <string name="recetasMenu">Recetas</string>

    <!--Pantalla de transportes-->
    <string name="subtituloTransporte">Medios de\n transporte</string>
    <string name="buses">Lineas de camiones</string>
    <string name="ubers">Uber</string>
    <string name="didis">Didi</string>
    <string name="indrivers">In driver</string>
    <string name="taxis">Taxi</string>

    <!--Pantalla recetas-->
    <string name="subtituloRecetas">¿Tienes hambre?</string>
    <string name="textoRecetas">Aquí puedes ver varias de nuestras recetas</string>
    <string name="ingredientes">Los ingredientes son: </string>
    <string name="procedimiento">Procedimiento: </string>

    <!--Botones-->
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="title_activity_lugares">Lugares</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="contentDUbicaciones">Opción de ubicación</string>
    <string name="contentDTransportes">Opción de medios de transporte</string>
    <string name="contentDBitacora">Opción de notas</string>
    <string name="contentDRecetas">Opción de recetas</string>


    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="usuario">Usuario / Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="registrame">Registrame</string>
    <string name="nota">Nota</string>
    <string name="titulo">Título</string>
    <string name="escribirNota">Escribir nota&#8230;</string>
    <string name="guardar">Guardar</string>
    <string name="eliminarCuenta">Eliminar cuenta</string>
    <string name="icono">Icono de perfil</string>
    <string name="contraseniaConfirmar">Confirma la contraseña</string>
    <string name="crearCuenta">Crear una cuenta</string>
    <string name="volver">Volver</string>
</resources>