<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".NotaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:text="@string/nota"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/et_titutlo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:minHeight="48dp"
        android:textColor="@color/primary_text"
        android:inputType="textShortMessage" />

    <EditText
        android:id="@+id/et_contenido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/escribirNota"
        android:textColor="@color/secondary_text"
        android:inputType="textMultiLine"
        android:layout_weight="1"
        android:gravity="top"
        android:scrollbars="vertical"
        />

    <Button android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:backgroundTint="@color/cafe"
        android:textColor="@color/white"
        android:text="@string/guardar"
        />

</LinearLayout>