<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rojoBajo"
    android:orientation="vertical"
    tools:context=".Menu_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/rojoBajo">

        <ImageView
            android:id="@+id/foraneoImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center|right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="Avatar del usuario"
            tools:srcCompat="@tools:sample/avatars"/> <!--Esta imagen es temporal-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_rounded"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/mensajeMenu"/>

        <GridLayout
            android:layout_marginTop="40dp"
            android:layout_marginBottom="35dp"
            android:layout_width="330dp"
            android:layout_height="360dp"
            android:columnCount="2"
            android:rowCount="4"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgUbicacion"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_row="0"
                android:layout_column="0"
                android:contentDescription="@string/contentDUbicaciones"
                android:background="@drawable/ubicacion"
                android:clickable="true"
                android:layout_gravity="center"
                android:focusable="true"/> <!--Esta imagen es temporal-->

            <TextView
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:layout_gravity="center_horizontal"

                android:text="@string/ubicacionMenu"/> <!--Esta imagen es temporal-->

            <ImageView
                android:id="@+id/imgTransporte"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/contentDTransportes"
                android:background="@drawable/icon_car"
                android:layout_gravity="center"
                android:clickable="true"

                android:focusable="true"/>

            <TextView
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:layout_row="1"
                android:layout_column="1"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/transporteMenu"/>

            <ImageView
                android:id="@+id/imgBitacora"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDBitacora"
                android:background="@drawable/icon_chat"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/bitacoraMenu"/>

            <ImageView
                android:id="@+id/imgRecetas"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_row="2"
                android:layout_column="1"
                android:contentDescription="@string/contentDRecetas"
                android:background="@drawable/icon_restaurant"
                android:clickable="true"
                android:layout_gravity="center"
                android:focusable="true"/>

            <TextView
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/recetasMenu"/>

        </GridLayout>


        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="135dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/CerrarSesion"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/morado"/>
    </LinearLayout>


</LinearLayout>