<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rojoBajo"
    android:orientation="vertical"
    tools:context=".RegistroActivity">

    <!--Linear con la foto de perfil-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/azulBajo">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"

            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/foto_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            tools:srcCompat="@tools:sample/avatars" />
    </LinearLayout>

    <!--Linear con los datos del registro-->
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="550dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/background_rounded"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/crearCuenta"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/tv_email"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="45dp"
            android:paddingStart="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/usuario"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/background_rounded"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:paddingStart="10sp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/contraseña"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/background_rounded"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tv_password2"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:paddingStart="10sp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/contraseniaConfirmar"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/background_rounded"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_guardarUsuario"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/morado"
            android:text="@string/iniciarSesion"
            android:textAllCaps="false" />


    </LinearLayout>


</RelativeLayout>