<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#F1EAEA"
    android:orientation="vertical"
    android:background="@color/rojoBajo"
    tools:context=".PerfilActivity">

    <!--Linear con la foto de perfil-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/azulBajo">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/foto_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            tools:srcCompat="@tools:sample/avatars" />

    </LinearLayout>

    <!--Linear con los datos del registro-->
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="550dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/background_rounded"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_nombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Usuario "
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="45dp"
            android:paddingStart="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/usuario"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/background_rounded"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="45dp"
            android:paddingStart="10sp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/contraseña"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/background_rounded"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_cerrar"
            android:layout_width="135dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="115dp"
            android:text="@string/CerrarSesion"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/morado" />

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="135dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/eliminarCuenta"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/morado" />

    </LinearLayout>


</RelativeLayout>