<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rojoBajo"
    tools:context=".LoginActivity">

    <!--Linear con la foto de perfil-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/azulBajo">


        <ImageView
            android:id="@+id/foto_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:src="@drawable/logotourists" />


    </LinearLayout>

    <!--Linear con los datos del registro-->
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="550dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/background_rounded"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/iniciarSesion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="45dp"
            android:paddingStart="10sp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/background_rounded"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:paddingStart="10sp"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/background_rounded"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_iniciar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/morado"
                android:padding="10dp"
                android:text="@string/iniciarSesion"
                android:textAllCaps="false" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/azul"
            android:text="@string/registrame"
            android:textAllCaps="false" />
    </LinearLayout>



</RelativeLayout>