<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Transportes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/backMenuTransporte"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:clickable="true"
                android:focusable="true"/>

            <ImageView
                android:id="@+id/foranioImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@tools:sample/avatars"/> <!--Esta imagen es temporal-->
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@color/grisClaro">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/subtituloTransporte"/>

        <GridLayout
            android:layout_width="370dp"
            android:layout_height="500dp"
            android:columnCount="5"
            android:rowCount="5">

            <!--BUS-->
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ic_baseline_location_on_24"/> <!--Esta es temporal hasta que tengamos el icono de BUS-->

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif-black"
                android:margin_top="60dp"
                android:text="@string/buses"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <!--UBER-->
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ic_baseline_arrow_back_24"/> <!--Temporal hasta tener un icono de UBER-->

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:fontFamily="sans-serif-black"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/ubers"/>

            <!--DIDI-->
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ic_baseline_location_on_24"/> <!--Temporal hasta tener un icono de DIDI-->

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/didis"/>

            <!--IN DRIVER-->
            <ImageView
                android:layout_height="60dp"
                android:layout_width="60dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ic_baseline_arrow_back_24"/><!--Temporal hasta tener un incono de INDRIVER-->

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/indrivers"/>

            <!--TAXIS-->
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/ic_baseline_location_on_24"/> <!--Temporal hasta que tengamos un icono de un taxi-->

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/taxis"/>
        </GridLayout>


    </LinearLayout>


</LinearLayout>
